Agregar mensaje de bienvenida al proyecto en index.html

--- a/farmacia-frontend/src/index.html
+++ b/farmacia-frontend/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <app-root>
     <h1>Welcome to Farmacia Frontend!</h1>
+    <p>Empezando proyecto full stack con Angular y Spring Boot</p>
   </app-root>
 </body>
 </html>
