--- a/farmacia_front/src/index.html
+++ b/farmacia_front/src/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FarmaciaFrontend</title>
+  <title>FarmaciaFront</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
 </head>
 <body>
-  <app-root>
-    <h1>Welcome to Farmacia Frontend!</h1>
-    <p>Empezando proyecto full stack con Angular y Spring Boot</p>
-  </app-root>
+  <app-root></app-root>
 </body>
 </html>
